dxr/tests/trybuild/toref.stderr
error: Deriving TryFromValue is not possible for structs that contain reference types. Try using a std::borrow::Cow here.
 --> tests/trybuild/toref.rs:5:13
  |
5 |     string: &'a str,
  |             ^
